--- a/contenido.html
+++ b/contenido.html
@@ -13,10 +13,10 @@
 	Contenido
 	<hr>
 	<a style="color:#FFFF00;" href="inicio.html"  target="pepito"> Inicio </a> <p>
-	<a style="color:#FFFF00;" href="Molotes.html" target="pepito"> Molotes </a> <p>
-	<a style="color:#FFFF00;" href="Empanadas.html" target="pepito"> Empanadas </a> <p>
-	<a style="color:#FFFF00;" href="Tostadas.html" target="pepito"> Tostadas </a> <p>
-	<a style="color:#FFFF00;" href="Pizzas.html" target="pepito"> Pizzas </a> <p>
+	<a style="color:#FFFF00;" href="molotes.html" target="pepito"> Molotes </a> <p>
+	<a style="color:#FFFF00;" href="empanadas.html" target="pepito"> Empanadas </a> <p>
+	<a style="color:#FFFF00;" href="tostadas.html" target="pepito"> Tostadas </a> <p>
+	<a style="color:#FFFF00;" href="pizzas.html" target="pepito"> Pizzas </a> <p>
        </font>
 	</center>
    </body>
